CMBSandbox4/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_Start_Date__c</fullName>
        <label>Anticipated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_ID__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Projects(1)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <label>Phase</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_External_ID__c</fullName>
        <description>This is to be used with Harvest</description>
        <displayFormat>PRJ{000}</displayFormat>
        <externalId>true</externalId>
        <label>Project External ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>SOW_Status__c</fullName>
        <label>SOW Status</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Project(1)</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects(1)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>